--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
         .modal-animate {
             animation: fadeIn 0.2s ease-out forwards;
         }
+        
+        /* Golden Glow Animation */
+        @keyframes goldenPulse {
+            0% { box-shadow: 0 0 0 0 rgba(234, 179, 8, 0.4); }
+            70% { box-shadow: 0 0 0 6px rgba(234, 179, 8, 0); }
+            100% { box-shadow: 0 0 0 0 rgba(234, 179, 8, 0); }
+        }
+        .ath-active {
+            border-color: #eab308 !important; /* Yellow-500 */
+            background-color: #fefce8 !important; /* Yellow-50 */
+            color: #854d0e !important; /* Yellow-800 */
+            animation: goldenPulse 2s infinite;
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen pb-20">
@@ -39,6 +52,22 @@
 
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
+
+        // --- ATH Data & Helper ---
+        const ATH_LEVELS = [
+            4497.854, 4420.53, 4380.10, 4247.50, 4218.20, 4180.00, 4085.20, 4049.50, 3977.40, 3949.60,
+            3895.30, 3831.30, 3791.10, 3728.30, 3699.50, 3674.60, 3646.40, 3622.60, 3600.00,
+            3578.60, 3549.60, 3500.00, 3472.40, 3443.40, 3387.00, 3373.40, 3357.10, 3343.80,
+            3317.80, 3282.00, 3295.00, 3245.00, 3149.20, 3130.00
+        ];
+
+        // Check if price is within +/- 5 points of any ATH level
+        const checkATH = (price) => {
+            if (!price) return false;
+            const numPrice = parseFloat(price);
+            if (isNaN(numPrice)) return false;
+            return ATH_LEVELS.some(ath => Math.abs(numPrice - ath) <= 3.0);
+        };
 
         // --- Icons Components ---
         const SaveIcon = () => (
@@ -91,6 +120,9 @@
         );
         const PasteIcon = () => (
              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/><rect width="8" height="4" x="8" y="2" rx="1" ry="1"/></svg>
+        );
+        const CrownIcon = () => (
+            <span className="text-yellow-500 animate-bounce" title="ใกล้จุด ATH">👑</span>
         );
 
 
@@ -630,60 +662,75 @@ ${advice}`;
                             </div>
                         </div>
 
-                        {/* Daily Levels */}
-                        <div className="bg-gray-50 rounded-lg border border-gray-100 overflow-hidden transition-all">
+                        {/* Daily Levels - Collapsible */}
+                        <div className="bg-gray-50 rounded-lg border border-gray-100 overflow-hidden transition-all mt-4">
+                             {/* Header Row */}
                              <div 
-                                className="flex flex-col md:flex-row items-center justify-center p-3 gap-2 cursor-pointer hover:bg-gray-100 transition-colors"
+                                className="flex flex-col md:flex-row items-center justify-between p-3 gap-2 cursor-pointer hover:bg-gray-100 transition-colors select-none"
                                 onClick={() => setIsDailyLevelsCollapsed(!isDailyLevelsCollapsed)}
                              >
-                                <div className="flex items-center gap-2 opacity-80">
+                                <div className="flex items-center gap-2 text-gray-600 font-bold text-sm">
                                     <RotateCcwIcon size={16} /> 
-                                    <span className="text-sm font-bold text-gray-600 uppercase tracking-wide">กรอบราคาประจำวัน</span>
-                                    {isDailyLevelsCollapsed ? <ChevronDownIcon size={16} /> : <ChevronUpIcon size={16} />}
+                                    <span>กรอบราคาประจำวัน</span>
                                 </div>
-                                <div className="relative ml-2" onClick={(e) => e.stopPropagation()}>
-                                    <span className="absolute left-2 top-1/2 transform -translate-y-1/2 text-gray-400">
-                                        <CalendarIcon />
-                                    </span>
-                                    <input 
-                                        type="date" 
-                                        value={currentDate}
-                                        onChange={(e) => loadDataForDate(e.target.value)}
-                                        className="pl-7 pr-2 py-1 text-sm border border-gray-300 rounded focus:ring-1 focus:ring-green-500 outline-none shadow-sm bg-white"
-                                    />
+
+                                <div className="flex items-center gap-3">
+                                    <div className="relative" onClick={(e) => e.stopPropagation()}>
+                                        <span className="absolute left-2 top-1/2 transform -translate-y-1/2 text-gray-400">
+                                            <CalendarIcon />
+                                        </span>
+                                        <input 
+                                            type="date" 
+                                            value={currentDate}
+                                            onChange={(e) => loadDataForDate(e.target.value)}
+                                            className="pl-8 pr-3 py-1.5 text-sm border border-gray-300 rounded-md focus:ring-2 focus:ring-green-500 outline-none shadow-sm bg-white hover:border-green-400 transition-colors cursor-pointer"
+                                        />
+                                    </div>
+                                    <div className="text-gray-400 opacity-80">
+                                        {isDailyLevelsCollapsed ? <ChevronDownIcon size={20} /> : <ChevronUpIcon size={20} />}
+                                    </div>
                                 </div>
                             </div>
                             
+                            {/* Body */}
                             {!isDailyLevelsCollapsed && (
-                                <div className="flex flex-col items-center gap-2 pb-3 px-3 bg-gray-50/50">
-                                    <div className="flex items-center gap-2">
-                                        <span className="text-xs font-bold text-red-500 w-32 text-right uppercase">แนวต้านหลัก (+5)</span>
+                                <div className="border-t border-gray-200 pt-4 pb-4 px-2 bg-white/50 flex flex-wrap justify-center items-end gap-2 md:gap-6">
+                                    <div className="flex flex-col items-center gap-1">
+                                        <span className="text-xs font-bold text-red-500 uppercase flex items-center gap-1">
+                                            แนวต้านหลัก (+5) {checkATH(levels.mainRes) && <CrownIcon />}
+                                        </span>
                                         <input 
                                             type="number" placeholder="0.00" value={levels.mainRes}
                                             onChange={(e) => handleLevelChange('mainRes', e.target.value)}
-                                            className="py-1 px-2 border border-red-200 rounded text-center text-base w-28 font-bold text-red-600 bg-white focus:ring-1 focus:ring-red-400 outline-none shadow-sm"
+                                            className={`py-1 px-2 border border-red-200 rounded text-center text-lg font-bold text-red-600 bg-white focus:ring-1 focus:ring-red-400 outline-none shadow-sm w-28 ${checkATH(levels.mainRes) ? 'ath-active' : ''}`}
                                         />
                                     </div>
-                                    <div className="flex items-center gap-2 relative">
-                                         <div className="absolute left-[-24px] top-1/2 transform -translate-y-1/2 text-gray-300 hidden sm:block">
+
+                                    <div className="flex flex-col items-center gap-1 relative">
+                                         <div className="absolute -left-5 top-1/2 mt-2 text-gray-300 hidden md:block">
                                             <ArrowUpCircleIcon size={14}/>
                                          </div>
-                                        <span className="text-xs font-bold text-blue-500 w-32 text-right uppercase">แนวรับ / ต้านย่อย</span>
+                                        <span className="text-xs font-bold text-blue-500 uppercase flex items-center gap-1">
+                                            แนวรับ / ต้านย่อย {checkATH(levels.minor) && <CrownIcon />}
+                                        </span>
                                         <input 
                                             type="number" placeholder="0.00" value={levels.minor}
                                             onChange={(e) => handleLevelChange('minor', e.target.value)}
-                                            className="py-1 px-2 border border-blue-200 rounded text-center text-base w-28 font-bold text-blue-600 bg-white focus:ring-1 focus:ring-blue-400 outline-none shadow-sm z-10"
+                                            className={`py-1 px-2 border border-blue-200 rounded text-center text-lg font-bold text-blue-600 bg-white focus:ring-1 focus:ring-blue-400 outline-none shadow-sm w-28 z-10 ${checkATH(levels.minor) ? 'ath-active' : ''}`}
                                         />
-                                         <div className="absolute right-[-24px] top-1/2 transform -translate-y-1/2 text-gray-300 hidden sm:block">
+                                         <div className="absolute -right-5 top-1/2 mt-2 text-gray-300 hidden md:block">
                                             <ArrowDownCircleIcon size={14}/>
                                          </div>
                                     </div>
-                                    <div className="flex items-center gap-2">
-                                        <span className="text-xs font-bold text-green-500 w-32 text-right uppercase">แนวรับหลัก (-5)</span>
+
+                                    <div className="flex flex-col items-center gap-1">
+                                        <span className="text-xs font-bold text-green-500 uppercase flex items-center gap-1">
+                                            แนวรับหลัก (-5) {checkATH(levels.mainSup) && <CrownIcon />}
+                                        </span>
                                         <input 
                                             type="number" placeholder="0.00" value={levels.mainSup}
                                             onChange={(e) => handleLevelChange('mainSup', e.target.value)}
-                                            className="py-1 px-2 border border-green-200 rounded text-center text-base w-28 font-bold text-green-600 bg-white focus:ring-1 focus:ring-green-400 outline-none shadow-sm"
+                                            className={`py-1 px-2 border border-green-200 rounded text-center text-lg font-bold text-green-600 bg-white focus:ring-1 focus:ring-green-400 outline-none shadow-sm w-28 ${checkATH(levels.mainSup) ? 'ath-active' : ''}`}
                                         />
                                     </div>
                                 </div>
@@ -790,12 +837,14 @@ ${advice}`;
                                                                 />
 
                                                                 <div>
-                                                                    <label className="text-xs text-gray-500 font-bold uppercase mb-2 block">ไส้หลัง Sig / จุดเช็ค</label>
+                                                                    <label className="text-xs text-gray-500 font-bold uppercase mb-2 block flex items-center gap-1">
+                                                                        ไส้หลัง Sig / จุดเช็ค {checkATH(plan.entryPrice) && <CrownIcon />}
+                                                                    </label>
                                                                     <input 
                                                                         type="number" value={plan.entryPrice}
                                                                         onChange={(e) => updatePlan(tf.id, index, 'entryPrice', e.target.value)}
                                                                         placeholder="0.00"
-                                                                        className="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-right font-mono font-medium text-gray-800 text-lg shadow-sm"
+                                                                        className={`w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-right font-mono font-medium text-gray-800 text-lg shadow-sm ${checkATH(plan.entryPrice) ? 'ath-active' : ''}`}
                                                                     />
                                                                 </div>
                                                             </div>
@@ -817,18 +866,20 @@ ${advice}`;
                                                                 </div>
 
                                                                 <div>
-                                                                    <label className="text-xs text-gray-500 font-bold uppercase mb-2 block">กรอบ Sideway (SW)</label>
+                                                                    <label className="text-xs text-gray-500 font-bold uppercase mb-2 block flex items-center gap-1">
+                                                                        กรอบ Sideway (SW) {(checkATH(plan.swUpper) || checkATH(plan.swLower)) && <CrownIcon />}
+                                                                    </label>
                                                                     <div className="flex gap-2">
                                                                         <div className="flex-1">
                                                                             <input type="number" placeholder="กรอบบน" value={plan.swUpper}
                                                                                 onChange={(e) => updatePlan(tf.id, index, 'swUpper', e.target.value)}
-                                                                                className="w-full p-2 border border-gray-300 rounded-lg text-center text-sm focus:ring-2 focus:ring-purple-500 outline-none"
+                                                                                className={`w-full p-2 border border-gray-300 rounded-lg text-center text-sm focus:ring-2 focus:ring-purple-500 outline-none ${checkATH(plan.swUpper) ? 'ath-active' : ''}`}
                                                                             />
                                                                         </div>
                                                                         <div className="flex-1">
                                                                             <input type="number" placeholder="กรอบล่าง" value={plan.swLower}
                                                                                 onChange={(e) => updatePlan(tf.id, index, 'swLower', e.target.value)}
-                                                                                className="w-full p-2 border border-gray-300 rounded-lg text-center text-sm focus:ring-2 focus:ring-purple-500 outline-none"
+                                                                                className={`w-full p-2 border border-gray-300 rounded-lg text-center text-sm focus:ring-2 focus:ring-purple-500 outline-none ${checkATH(plan.swLower) ? 'ath-active' : ''}`}
                                                                             />
                                                                         </div>
                                                                     </div>
